[gd_scene load_steps=7 format=3 uid="uid://dwqpfs5d4voiq"]

[ext_resource type="Script" uid="uid://dmfas1cx8jtq" path="res://Entities/MainMenu/Dialogs/options_dialog.gd" id="1_eadd5"]
[ext_resource type="FontFile" uid="uid://dykyxq17m2unc" path="res://Original Resources/fonts/m6x11plus.ttf" id="2_6oihj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3g13"]
bg_color = Color(0.192157, 0.301961, 0.309804, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.694118, 0.760784, 0.819608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwd6f"]
bg_color = Color(0.992157, 0.258824, 0.227451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5
shadow_offset = Vector2(3, 5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m40jt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg23e"]
bg_color = Color(0.921569, 0.568627, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5
shadow_offset = Vector2(3, 5)

[node name="OptionsDialog" type="PanelContainer"]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -149.0
offset_right = 240.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q3g13")
script = ExtResource("1_eadd5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsButtonPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_jwd6f")

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButtonPanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6oihj")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_m40jt")
text = "Settings"
flat = true

[node name="StatsButtonPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_jwd6f")

[node name="StatsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StatsButtonPanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6oihj")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_m40jt")
text = "Stats"
flat = true

[node name="CreditsButtonPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_jwd6f")

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreditsButtonPanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6oihj")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_m40jt")
text = "Credits"
flat = true

[node name="BackButtonPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_lg23e")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/BackButtonPanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6oihj")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_m40jt")
text = "Back
"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButtonPanelContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StatsButtonPanelContainer/StatsButton" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreditsButtonPanelContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButtonPanelContainer/BackButton" to="." method="_on_back_button_pressed"]
